[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Luca Valentini <vhemt@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.61.1"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8-black = "^0.2.1"
mypy = "^0.790"
flake8-isort = "^4.0.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
